Fixed scroll overflow

--- a/assets/css/open.scss
+++ b/assets/css/open.scss
@@ -15,6 +15,7 @@ body,
   justify-content: center;
   align-items: center;
   padding: 2rem;
+  box-sizing: border-box;
 
   .open-page {
     max-width: 800px;
